syntax = "proto3";
import "google/protobuf/empty.proto";

package user;

option go_package = "user_srv/proto";

// 在 mxshop_srv 目录下
// 生成 Protobuf 消息代码: protoc -I user_srv/proto user.proto --go_out=.
// 生成 gRPC 服务代码: protoc -I user_srv/proto user.proto --go-grpc_out=.

service User {
  rpc getUserList(PageInfo) returns (UserListResponse); // 用户列表
  rpc getUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过手机查询用户
  rpc getUserById(IdRequest) returns (UserInfoResponse); // 通过ID查询用户
  rpc createUser(CreateUserInfo) returns (UserInfoResponse); // 创建用户
  rpc updateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
  rpc checkPassword(CheckInfo) returns (CheckResponse); // 更新用户
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  string id = 1;
}

message CreateUserInfo {
  string password = 1;
  string mobile = 2;
  string nickname = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickname = 3;
  uint64 birthday = 5;
  string gender = 6;
}

message CheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

